# SkyPro_Web

./: .gitignore  README.md  catalog.html  categories.html  contacts.html  home.html  pyproject.toml  server.py
Website_Django/: .env.example  .gitignore  pyproject.toml
Website_Django/blog/: forms.py  models.py  urls.py  views.py
Website_Django/blog/migrations/: 0001_initial.py
Website_Django/blog/templates/blog/: post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
Website_Django/catalog/: admin.py  forms.py  models.py  urls.py  views.py
Website_Django/catalog/fixtures/: categories.json  products.json
Website_Django/catalog/management/commands/: add_products.py
Website_Django/catalog/migrations/: 0001_initial.py
Website_Django/catalog/templates/: base.html  contacts.html  home.html  product_detail.html  product_form.html
Website_Django/catalog/templates/includes/: main_menu.html
Website_Django/config/: settings.py  urls.py
Website_Django/static/css/: styles.css
