[project]
name = "website-django"
version = "0.1.0"
description = ""
authors = [
    {name = "bntmzu",email = "kuranova988@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "ipython (>=9.3.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py313"]
skip-string-normalization = false

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
combine_as_imports = true
force_single_line = false
include_trailing_comma = true
[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

